# security

./: .gitignore  CMakeLists.txt  README.md  build_and_test_all.bat  doc.md  generate_jni_header.bat  pom.xml  run_java_tests.bat  run_simple_test.bat  test_maven_structure.bat
include/: com_securemessaging_SecureCrypto.h  interactive_secure_message.h  secure_crypto.h  secure_crypto_processor.h
src/: interactive_main.cpp  interactive_secure_message.cpp  secure_crypto.cpp  secure_crypto_core.cpp  secure_crypto_jni.cpp
src/main/java/com/securemessaging/: EncryptionResult.java  SecureCrypto.java  SystemInfo.java
src/test/java/com/securemessaging/: EncryptionDemo.java  InteractiveSecureCrypto.java  JNIConnectionTest.java  SecureCryptoTest.java  SimpleTest.java
